Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -54,6 +54,7 @@ sidebar_position: 3
 - improved output of [spo site admin list](../cmd/spo/site/site-admin-list.mdx) when running as admin [#6182](https://github.com/pnp/cli-microsoft365/issues/6182)
 - fixed asciinema player mount on docs [#6204](https://github.com/pnp/cli-microsoft365/issues/6204)
 - enhanced [spo page remove](../cmd/spo/page/page-remove.mdx) to support deleting locked pages [#6294](https://github.com/pnp/cli-microsoft365/issues/6294)
+- added support for SPFx v1.20.0 [#6391](https://github.com/pnp/cli-microsoft365/issues/6391)
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
