--- a/docs/docs/cmd/spo/site/site-sharingpermission-set.mdx
+++ b/docs/docs/cmd/spo/site/site-sharingpermission-set.mdx
@@ -34,19 +34,19 @@ When specifying `capability`, consider the following:
 Update the sharing permissions for a site so only owners can share files and the site
 
 ```sh
-m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename  --capability ownersOnly
+m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename --capability ownersOnly
 ```
 
 Update the sharing permissions for a site where so both owners and members can share files and the site
 
 ```sh
-m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename  --capability full
+m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename --capability full
 ```
 
 Update the sharing permissions for a site where so owners can share the site, but members can only share files
 
 ```sh
-m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename  --capability full
+m365 spo site sharingpermission set --siteUrl https://siteaddress.com/sites/sitename --capability limited
 ```
 
 ## Response
