--- a/docs/docs/user-guide/using-own-identity.mdx
+++ b/docs/docs/user-guide/using-own-identity.mdx
@@ -5,11 +5,11 @@ sidebar_position: 10
 
 # Use your own Microsoft Entra identity
 
-When you use the CLI for Microsoft 365 to connect to your tenant for the first time, you are presented with a `Permissions requested` prompt from Azure, by accepting this prompt you are consenting to using the `PnP Microsoft 365 Management Shell` Microsoft Entra application with your tenant as well as the permissions that it requires.
+When you use the CLI for Microsoft 365 to connect to your tenant for the first time, you need to specify at least the `appId` and `tenant` options during login.
 
-We ask for a wide range to permissions upfront, including permissions that require administrative level consent, so that it is easy to get started with the CLI and try out the commands across many CLI for Microsoft 365 workloads in your tenant without having to handle the complexity of managing the permissions for the different commands manually in Azure.
+To simplify the process of creating an App Registration with all the necessary permission scopes, you can use the [m365 setup](../cmd/setup.mdx) command. This command can set up an App Registration with a wide range of permissions, including those that require administrative consent. This makes it easy to get started with the CLI and try out commands across many CLI for Microsoft 365 workloads in your tenant without having to manually manage permissions for different commands in Azure.
 
-Whilst this is fine for working against development and test environments, using these levels of permissions against production environments is inconvenient and administrators are not comfortable with granting such permissions to a multi-tenant application within their environment.
+While this approach is convenient for development and test environments, using these levels of permissions against production environments may be inconvenient. Administrators might be uncomfortable granting such permissions to an application within their environment. Therefore, it's important to carefully consider the permissions you grant when setting up your App Registration for production use.
 
 In this scenario, administrators will want to provide their own Microsoft Entra app registration to use with the CLI to enable greater control over the permissions that are granted.
 
@@ -23,7 +23,7 @@ Select `Microsoft Entra ID` from the global menu, select `App registrations` in 
 
 [![New app registration](../images/using-own-identity/new-app-registration.png)](../images/using-own-identity/new-app-registration.png)
 
-In the form, enter a name for your new application, for the purpose of this tutorial let's use `Custom PnP CLI for Microsoft 365`. You can always change this later if you want. Leave the `Supported account types` and `Redirect URI` values as they are and select the `Register` button at the foot of the form to create your custom application.
+In the form, enter a name for your new application, for the purpose of this tutorial let's use `Custom PnP CLI for M365`. You can always change this later if you want. Leave the `Supported account types` and `Redirect URI` values as they are and select the `Register` button at the foot of the form to create your custom application.
 
 [![Register an application](../images/using-own-identity/register-an-application.png)](../images/using-own-identity/register-an-application.png)
 
@@ -35,7 +35,7 @@ Take a copy of both the `Application (client) ID` and `Directory (tenant) ID` va
 
 ## Configure Authentication settings
 
-We next need to configure our new application so that it can be used with the CLI for Microsoft 365. To do this we need to select `Authentication` in the `Custom PnP CLI for Microsoft 365` blade menu.
+We next need to configure our new application so that it can be used with the CLI for Microsoft 365. To do this we need to select `Authentication` in the `Custom PnP CLI for M365` blade menu.
 
 This will present you with three sections: `Platform configuration`, `Supported account type` and `Advanced settings`.
 
@@ -65,7 +65,7 @@ To make sure all these changes are applied, select the `Save` button before movi
 
 ## Configure API Permissions
 
-Now that we have configured the application to work with the CLI for Microsoft 365, we next need to grant what permissions the CLI will have within our tenant. Select the `API permissions` in the `Custom PnP CLI for Microsoft 365` blade menu.
+Now that we have configured the application to work with the CLI for Microsoft 365, we next need to grant what permissions the CLI will have within our tenant. Select the `API permissions` in the `Custom PnP CLI for M365` blade menu.
 
 You will see a section called `Configured permissions` with one permission already granted. This is the default permission which allows the application to sign in the user account used when authenticating to the Microsoft Graph.
 
@@ -145,7 +145,7 @@ For the purpose of this tutorial, we will be using the `Device code flow` to int
 
 At your terminal session, execute `m365 login` to start the authentication process, a login device code will be displayed along with a link to a web page where it needs to be entered. Navigate to [https://microsoft.com/devicelogin](https://microsoft.com/devicelogin), enter the code into the input field and select `Next`. You will then be presented with either a login screen or accounts that you have already logged in to Microsoft 365 with. Login with or choose the account from the list that you want to use with CLI for Microsoft 365.
 
-You will now be prompted to consent that the custom application, `Custom PnP CLI for Microsoft 365`, can use the two permissions that we configure earlier, `Read items in all site collections` and `Sign you in and read your profile` on your behalf. Select `Accept` to consent and complete the sign-in process.
+You will now be prompted to consent that the custom application, `Custom PnP CLI for M365`, can use the two permissions that we configure earlier, `Read items in all site collections` and `Sign you in and read your profile` on your behalf. Select `Accept` to consent and complete the sign-in process.
 
 Returning back to your command line, you can now verify that the sign in has been successful by executing the `m365 status` command.
 
