--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -68,7 +68,7 @@ The deprecated Guest value was removed from the `role` option in the [aad m365gr
 
 #### What action do I need to take?
 
-Please, check the documentation of the aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
+Please, check the documentation of the [aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
 
 #### Aligned options with naming convention
 
@@ -129,6 +129,14 @@ We've enhanced the [entra m365group set](./cmd/entra/m365group/m365group-set.mdx
 #### What action do I need to take?
 
 Make sure that if you are currently updating groups using the `displayName` option, you update your scripts to use the `newDisplayName` option instead.
+
+### Removed deprecated option `username` from `entra m365group user set` command.
+
+The deprecated option `username` was removed from the [entra m365group user set](./cmd/entra/m365group/m365group-user-set.mdx) command.
+
+#### What action do I need to take?
+
+Please, check the documentation of the [entra m365group user set](./cmd/entra/m365group/m365group-user-set.mdx) command to see the updated `username` option and adjust your scripts accordingly.
 
 ## SharePoint
 
