--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,7 @@ sidebar_position: 3
 
 ### Changes
 
+- extended `m365 login` with `--ensure` [#5217](https://github.com/pnp/cli-microsoft365/issues/5217)
 - updated docs thumbnail [#6302](https://github.com/pnp/cli-microsoft365/issues/6302)
 
 ### ⚠️ Breaking changes
