--- a/docs/docs/contribute/new-command/unit-tests.mdx
+++ b/docs/docs/contribute/new-command/unit-tests.mdx
@@ -6,7 +6,7 @@ Once you have correctly set up your local environment, you can run `npm run watc
 
 :::
 
-Each command must be accompanied by a set of unit tests. We aim for 100% code and branch coverage in every command file. To accomplish this, the CLI for Microsoft 365 makes use of `Sinon` and `Mocha`. `Mocha` is the JavaScript test framework that’s often used for testing Node.js applications. It’s a widely used testing tool for both JavaScript and TypeScript projects. `Sinon`, on the other hand, will be used to test a method that is required to interact with or call other external methods. Therefore, you need a utility to spy, stub, or mock those external methods.
+Each command must be accompanied by a set of unit tests. We aim for 100% code and branch coverage in every command file. To accomplish this, the CLI for Microsoft 365 makes use of `Sinon` and `Mocha`. `Mocha` is the JavaScript test framework that's often used for testing Node.js applications. It's a widely used testing tool for both JavaScript and TypeScript projects. `Sinon`, on the other hand, will be used to test a method that is required to interact with or call other external methods. Therefore, you need a utility to spy, stub, or mock those external methods.
 
 To get started, we will need a file to work in. Each command will have its own test file that you can work in. These are the common files found in the `src` directory and end with `*.spec.ts`. For our example, we'll create a new one based on our sample issue, which is mentioned [here](./step-by-step-guide.mdx#new-command-get-site-group). We'll name it `group-get.spec.ts`.
 
@@ -18,7 +18,6 @@ Each `Mocha` file that ends with `*.spec.ts` will contain several common interfa
 import commands from '../../commands.js';
 
 describe(commands.GROUP_GET, () => {
-  
   before(() => {
     // Execute before running tests
   });
@@ -174,9 +173,9 @@ describe(commands.GROUP_GET, () => {
 });
 ```
 
-### Testing `#initValidators` conditions
+### Testing validation conditions
 
-`#initValidators` will validate if the option input is correct with the input we require. For our scenario, we have a condition that will check whether or not the option `id` input is a number. Because this condition can pass and fail, we will need to write two tests. One for failure and one where the condition passes.
+Zod validates if the option input is correct with the input we require. For our scenario, we have a condition that will check whether or not the option `id` input is a number. Because this condition can pass and fail, we will need to write two tests. One for failure and one where the condition passes.
 
 ```ts title="src/m365/spo/commands/group/group-get.spec.ts"
 // ...
@@ -185,13 +184,19 @@ describe(commands.GROUP_GET, () => {
   // ...
 
  it('fails validation if the specified ID is not a number', async () => {
-    const actual = await command.validate({ options: { webUrl: 'https://contoso.sharepoint.com', id: 'a' } }, commandInfo);
-    assert.notStrictEqual(actual, true);
+    const actual = commandOptionsSchema.safeParse({
+      webUrl: 'https://contoso.sharepoint.com',
+      id: 'a'
+    });
+    assert.strictEqual(actual.success, false);
   });
 
   it('passes validation when the URL is valid and the ID is passed', async () => {
-    const actual = await command.validate({ options: { webUrl: 'https://contoso.sharepoint.com', id: 7 } }, commandInfo);
-    assert.strictEqual(actual, true);
+    const actual = commandOptionsSchema.safeParse({
+      webUrl: 'https://contoso.sharepoint.com',
+      id: 7
+    });
+    assert.strictEqual(actual.success, true);
   });
 });
 ```
