Updates release notes and upgrade guidance

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -40,6 +40,7 @@ sidebar_position: 3
 - updated [cli doctor](../cmd/cli/cli-doctor.mdx) command output [#5923](https://github.com/pnp/cli-microsoft365/issues/5923)
 - removed duplicate properties from [teams tab list](../cmd/teams/tab/tab-list.mdx) command [#5900](https://github.com/pnp/cli-microsoft365/issues/5900)
 - renamed `entra group user <verb>` to `entra group member <verb>`. [#6396](https://github.com/pnp/cli-microsoft365/issues/6396)
+- Updates setting users in `entra m365group set` [#6061](https://github.com/pnp/cli-microsoft365/issues/6061)
 
 ## [v9.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.1.0)
 
